--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
                 iceServers: [
                     // Google STUN – always good
                     { urls: 'stun:stun.l.google.com:19302' },
-                    { urls: 'stun:stun1.l.google.com:19302' },
-                    { urls: 'stun:stun2.l.google.com:19302' },
-                    { urls: 'stun:stun3.l.google.com:19302' },
-                    { urls: 'stun:stun4.l.google.com:19302' },
+                  //  { urls: 'stun:stun1.l.google.com:19302' },
+                  //  { urls: 'stun:stun2.l.google.com:19302' },
+                  //  { urls: 'stun:stun3.l.google.com:19302' },
+                  // { urls: 'stun:stun4.l.google.com:19302' },
 
                     // openrelayproject – both UDP and TCP
                     {
@@ -139,23 +139,23 @@
                         username: 'openrelayproject',
                         credential: 'openrelayproject'
                     },
-                    {
-                        urls: 'turn:openrelayproject.org:3478?transport=tcp',
-                        username: 'openrelayproject',
-                        credential: 'openrelayproject'
-                    },
-
-                    // numb.viagenie.ca (still active, public test account)
-                    {
-                        urls: 'turn:numb.viagenie.ca:3478',
-                        username: 'letmein',
-                        credential: 'letmein'
-                    },
-                    {
-                        urls: 'turn:numb.viagenie.ca:3478?transport=tcp',
-                        username: 'letmein',
-                        credential: 'letmein'
-                    },
+                   //  {
+                   //      urls: 'turn:openrelayproject.org:3478?transport=tcp',
+                   //      username: 'openrelayproject',
+                   //      credential: 'openrelayproject'
+                   //  },
+				   // 
+                   //  // numb.viagenie.ca (still active, public test account)
+                   //  {
+                   //      urls: 'turn:numb.viagenie.ca:3478',
+                   //      username: 'letmein',
+                   //      credential: 'letmein'
+                   //  },
+                   //  {
+                   //      urls: 'turn:numb.viagenie.ca:3478?transport=tcp',
+                   //      username: 'letmein',
+                   //      credential: 'letmein'
+                   //  },
 
                     // fallback TURN over TCP/443 (often allowed on cellular)
                     {
