Enable audio for screen sharing

--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@ async function startScreenShare() {
                 // Optional: prefer a more efficient codec
                 // (modern browsers will adapt automatically)
             },
-            audio: false
+            audio: true
         });
 
         localScreenShareStream = stream;
